# BoneDoc

./: Anatomy.cpp  BoneDoc  CMakeLists.txt  Dockerfile  Humerus.cpp  README.md  bonedoc.conf
.Trash-1000/files/: .CMakeLists.txt.swp
.Trash-1000/info/: .CMakeLists.txt.swp.trashinfo
BoneDoc/: README.md
Data/: FemurLeftFemaleA.vtk  FemurRightMaleC-landmarks.csv  HumerusRightMaleA-landmarks.csv  HumerusRightMaleC-landmarks.csv  TibiaLeftFemaleC-landmarks.csv  TibiaLeftFemaleC.vtk  TibiaRightMaleA-landmarks.csv  TibiaRightMaleA.vtk
data/: FemurLeftFemaleA-landmarks.csv  FemurLeftFemaleA.vtk  FemurRightMaleC-landmarks.csv  FemurRightMaleC.fcsv  FemurRightMaleC.vtk  HumerusRightMaleA-landmarks.csv  HumerusRightMaleC-landmarks.csv  HumerusRightMaleC.vtk  TibiaLeftFemaleC-landmarks.csv  TibiaRightMaleA-landmarks.csv
src/: Anatomy.cpp  Anatomy.h  BoneDoc  BoneDoc.cpp  BoneDoc.h  BoneDocServer.cpp  BoneDocServer.h  CMakeCache.txt  CMakeLists.txt  Femur.cpp  Femur.h  Humerus.cpp  Humerus.h  Makefile  ReadMe.txt  Study.cpp  Study.h  Tibia.cpp  Tibia.h  cmake_install.cmake  config.txt  main.cpp
src/Data/: FemurLeftFemaleA.fcsv  HumerusRightMaleA.fcsv  HumerusRightMaleA.vtk  HumerusRightMaleC.fcsv  TibiaLeftFemaleC.fcsv  TibiaRightMaleA.fcsv
